My first website commit. The begining of greatness

--- a/_site.yml
+++ b/_site.yml
@@ -1,9 +1,11 @@
 name: "my-website"
 output_dir: "."
 navbar:
-  title: "My Website"
+  title: "Polin's Website"
   left:
     - text: "Home"
       href: index.html
     - text: "About Me"
       href: about.html
+    - text: "R Note"
+      href: rnote.html
