My first website commit. The begining of greatness

--- a/_site.yml
+++ b/_site.yml
@@ -7,5 +7,7 @@ navbar:
       href: index.html
     - text: "About Me"
       href: about.html
+    - text: "Research"
+      href: research.html
     - text: "R Note"
       href: rnote.html
