--- a/_site.yml
+++ b/_site.yml
@@ -9,5 +9,7 @@ navbar:
       href: about.html
     - text: "Research"
       href: research.html
+    - text: "Teaching"
+      href: teaching.html
     - text: "R Note"
       href: rnote.html
