--- a/_site.yml
+++ b/_site.yml
@@ -13,3 +13,5 @@ navbar:
       href: teaching.html
     - text: "R Note"
       href: rnote.html
+    - text: "French data test"
+      href: french.html
