--- a/_site.yml
+++ b/_site.yml
@@ -11,7 +11,7 @@ navbar:
       href: research.html
     - text: "Teaching"
       href: teaching.html
-    - text: "R Note"
+    - text: "Random Note"
       href: rnote.html
     - text: "French data test"
       href: 'https://polinwang.shinyapps.io/test/'
